--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'com.codeborne:selenide:6.11.0'
+    testImplementation 'org.testng:testng:7.1.0'
 }
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
